Fix wrapping of buttons!

--- a/stylesheets/find-and-replace.less
+++ b/stylesheets/find-and-replace.less
@@ -71,14 +71,14 @@
 
   .replace-container {
     .btn-toggle.btn-group .btn {
-      width: @button-width/2;
+      width: 50%;
     }
   }
 
   .find-container {
     .btn-toggle.btn-group .btn {
       .option-button();
-      width: @button-width/3;
+      width: 33.333%;
 
       &.option-selection {
         font-family: "Times New Roman";
@@ -103,7 +103,7 @@
 
 
 .project-find {
-  @project-button-width: @button-width - @button-width/3;
+  @project-button-width: 72px;
 
   -webkit-user-select: none;
 
@@ -135,13 +135,13 @@
   .find-container {
     .btn-toggle.btn-group .btn {
       .option-button();
-      width: @project-button-width/2;
+      width: 50%;
     }
   }
 
   .replace-container {
     .btn-toggle.btn-group .btn {
-      width: @project-button-width;
+      width: 100%;
     }
   }
 
